# version_machine

./: LICENSE  Pipfile  README.md  build_readme_examples.py  justfile  pyproject.toml  readme.template.md  setup.py
examples/: basic.py  example_version.py
tests/: test_basic.py  test_cli.py  test_git.py  test_version_machine.py
version_machine/: __init__.py  __main__.py  base_classes.py  core.py  default_plugins.py  git.py  lock.py  plugin_base.py  random_str.py
