[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.version_machine]

    [tool.version_machine.__version__]
    path = "version_machine/__version__.py"
    increment = "patch"

    [tool.version_machine.example_version]
    path = "examples/example_version.py"
    increment = "major"
